ix: prevent JWT filter double-registration causing 403